feat: added likes and dislikes in the backend; TODO: post methods for incrementing/decrementing likes
